--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 10;
   background-color: transparent;
+  box-shadow: 0px 15px 10px -15px rgb(206, 206, 206);
 }
 
 .navigation-bar.colourChange {
