fixed navbar toggle

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -12,6 +12,10 @@
   box-shadow: 0px 15px 10px -15px rgb(173, 173, 173);
 }
 
+.dropdown-nav {
+  justify-content: flex-end;
+}
+
 .my-link {
   font-size: 1.2rem;
   display: flex;
@@ -30,12 +34,8 @@
   color: rgb(221, 146, 155) !important;
 }
 
-header {
-  position: relative;
-  height: 100vh;
-  background: url(../../images/background-image.jpg);
-  background-size: cover;
-  -webkit-background-size: cover !important;
-  text-align: center;
-  overflow: hidden;
+@media (max-width: 767px) {
+  .navbar-collapse {
+    background-color: #e1ebec;
+  }
 }
