updated about me section

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -34,8 +34,8 @@
   .intro__profile-img {
     max-height: 30vh;
   }
-  .intro {
-    margin-top: 20% !important;
+  .intro-content {
+    padding-top: 20% !important;
   }
 
   .name-text {
