--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -33,6 +33,22 @@
   margin-right: 1rem;
 }
 
+@media screen and (min-width: 1068px) {
+  .about-row {
+    flex-direction: row;
+  }
+
+  .about-img {
+    margin-top: 2rem;
+    width: 50%;
+    height: 50vh;
+  }
+
+  .about-text {
+    padding: 1rem 0 0 2rem;
+  }
+}
+
 @media screen and (min-width: 1400px) {
   .section-container {
     width: 80%;
@@ -56,22 +72,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  .about-row {
-    flex-direction: row;
-  }
-
-  .about-img {
-    width: 50%;
-    height: 60vh;
-  }
-
-  .about-text {
-    padding: 1rem 0 0 2rem;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1067px) {
   .about-img {
     width: 75%;
     margin: auto;
